Fixed grid flicker

--- a/source/sass/app/_states.scss
+++ b/source/sass/app/_states.scss
@@ -31,7 +31,6 @@
         }
     }
     .feed__item:hover {
-        box-shadow: 0px 10px 15px 5px rgba( 0, 0, 0, 0.4 );
         z-index: 2;
         }
     .carousel__copy {
